Fix layout issues on other profile page

--- a/views/styles/other-user-profile.css
+++ b/views/styles/other-user-profile.css
@@ -53,7 +53,12 @@
   }
   
   .profile-header-wrapper-other-user {
-    padding-bottom: 0;
+    padding-bottom: 9%;
+  }
+
+  .profile-info {
+    padding-top: 0;
+    margin-top: 0;
   }
 }
 
@@ -72,6 +77,6 @@
   }
 
   .profile-header-wrapper-other-user {
-    padding-bottom: 0;
+    padding-bottom: 3%;
   }
 }
